--- a/src/app/components/reserva/reserva.component.html
+++ b/src/app/components/reserva/reserva.component.html
@@ -66,7 +66,7 @@
                                     <button type="button" (click)="reservarCol('A', i)" class="btn btn-success me-3 p-3 btn-butaca">{{a.columna}}</button>
                                 </div>
                                 <div *ngIf="a.disponible==false">
-                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca">{{a.columna}}</button>
+                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca" disabled>{{a.columna}}</button>
                                 </div>
                             </div>
                         </div>
@@ -77,7 +77,7 @@
                                     <button type="button" (click)="reservarCol('B', i)" class="btn btn-success me-3 p-3 btn-butaca">{{b.columna}}</button>
                                 </div>
                                 <div *ngIf="b.disponible==false">
-                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca">{{b.columna}}</button>
+                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca" disabled>{{b.columna}}</button>
                                 </div>
                             </div>
                         </div>
@@ -88,7 +88,7 @@
                                     <button type="button" (click)="reservarCol('C', i)" class="btn btn-success me-3 p-3 btn-butaca">{{c.columna}}</button>
                                 </div>
                                 <div *ngIf="c.disponible==false">
-                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca">{{c.columna}}</button>
+                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca" disabled>{{c.columna}}</button>
                                 </div>
                             </div>
                         </div>
@@ -99,7 +99,7 @@
                                     <button type="button" (click)="reservarCol('D', i)" class="btn btn-success me-3 p-3 btn-butaca">{{d.columna}}</button>
                                 </div>
                                 <div *ngIf="d.disponible==false">
-                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca">{{d.columna}}</button>
+                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca" disabled>{{d.columna}}</button>
                                 </div>
                             </div>
                         </div>
@@ -110,7 +110,7 @@
                                     <button type="button" (click)="reservarCol('E', i)" class="btn btn-success me-3 p-3 btn-butaca">{{e.columna}}</button>
                                 </div>
                                 <div *ngIf="e.disponible==false">
-                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca">{{e.columna}}</button>
+                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca" disabled>{{e.columna}}</button>
                                 </div>
                             </div>
                         </div>
@@ -121,7 +121,7 @@
                                     <button type="button" (click)="reservarCol('F', i)" class="btn btn-success me-3 p-3 btn-butaca">{{f.columna}}</button>
                                 </div>
                                 <div *ngIf="f.disponible==false">
-                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca">{{f.columna}}</button>
+                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca" disabled>{{f.columna}}</button>
                                 </div>
                             </div>
                         </div>
@@ -132,7 +132,7 @@
                                     <button type="button" (click)="reservarCol('G', i)" class="btn btn-success me-3 p-3 btn-butaca">{{g.columna}}</button>
                                 </div>
                                 <div *ngIf="g.disponible==false">
-                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca">{{g.columna}}</button>
+                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca" disabled>{{g.columna}}</button>
                                 </div>
                             </div>
                         </div>
@@ -143,7 +143,7 @@
                                     <button type="button" (click)="reservarCol('H', i)" class="btn btn-success me-3 p-3 btn-butaca">{{h.columna}}</button>
                                 </div>
                                 <div *ngIf="h.disponible==false">
-                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca">{{h.columna}}</button>
+                                    <button type="button" class="btn btn-danger me-3 p-3 btn-butaca" disabled>{{h.columna}}</button>
                                 </div>
                             </div>
                         </div>
