--- a/src/app/components/lista-de-peliculas/lista-de-peliculas.component.html
+++ b/src/app/components/lista-de-peliculas/lista-de-peliculas.component.html
@@ -1,20 +1,16 @@
-
-
-<main class="principal">
-  
-
-  
-  <div class="movie-item" *ngFor="let peli of peliculas">
-    <div class="mv-img">
-      <img src="{{peli.imagen}}" alt="imgPeli">
-    </div>
-
-    <div class="title-in" style="padding:5px">
-      <h6 class="text-center"><a routerLink="/info/{{peli.id}}" routerLinkActive="active">{{peli.titulo}}</a></h6>
+<div class="movie-items full-width">
+  <div class="title-hd">
+    <h2>Todas las Peliculas</h2>
+    <a routerLink="/peliculas" style="Color:white">Ver todos</a>
+  </div>
+  <div style="display:flex; flex-wrap: wrap;">
+    <div *ngFor="let peli of peliculas">
+        <div class="card">
+          <a routerLink="/info/{{peli.id}}" class="a">
+            <div class="info"><span style="font-size: 15px; font-weight: bold; color:white">Ver info</span></div>
+            <img class="imagen" src="{{peli.imagen}}">
+          </a>
+        </div>
+      </div>
     </div>
   </div>
-
-
-</main>
-
-
