--- a/src/app/components/candy-snack-store/candy-snack-store.component.css
+++ b/src/app/components/candy-snack-store/candy-snack-store.component.css
@@ -18,9 +18,6 @@
     font-family: 'Dosis', sans-serif;
   }
 
-  .card{
-    height: auto;
-  }
 
   .comprar{
     background-color: rgb(133, 29, 29);
@@ -37,4 +34,15 @@
   .store{
     border: 1px solid yellow;
     border-radius: 10px;
+    display:flex;
+    justify-content:center; 
+    width:100%;
+    padding:10px;
+  }
+
+  .card{
+    width: 20rem; 
+    height: 35rem; 
+    margin:10px;
+    
   }
