Correccion en funciones. Faltan cargar en backend

--- a/src/app/components/admin/funciones-admin/funciones-admin.component.html
+++ b/src/app/components/admin/funciones-admin/funciones-admin.component.html
@@ -74,5 +74,6 @@
   ></app-modal-eliminar-pelicula>
   <app-modal-funciones-pelicula
     [idPelicula]="peliculaElegida.id"
+    [tituloPelicula]="peliculaElegida.titulo"
   ></app-modal-funciones-pelicula>
 </div>
