--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -2,7 +2,11 @@
   <div class="d-flex flex-row justify-content-between align-items-center">
     <div class="d-flex align-items-center">
       <div routerLink="/" class="navbar-header logo">
-        <div class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <div
+          class="navbar-toggle"
+          data-toggle="collapse"
+          data-target="#bs-example-navbar-collapse-1"
+        >
           <span class="sr-only">Toggle navigation</span>
           <div id="nav-icon1">
             <span></span>
@@ -10,7 +14,9 @@
             <span></span>
           </div>
         </div>
-        <a href="javascript:void(0);"><img class="logo" src="assets/images/logo1.png" alt="" width="80" /></a>
+        <a href="javascript:void(0);"
+          ><img class="logo" src="assets/images/logo1.png" alt="" width="80"
+        /></a>
       </div>
 
       <div style="position: relative; top: 5px" class="d-flex ms-5">
@@ -23,28 +29,72 @@
       </div>
     </div>
 
-    <div style="width:400px" *ngIf="buscador == true">
-      <form style="width: 100%" [formGroup]="formBusqueda" (ngSubmit)="mostrarBusqueda()">
-        <input type="text" class="input-busqueda-inicio" formControlName="titulo"
-          placeholder="Busca la pelicula que quieras ver" />
+    <div style="width: 400px" *ngIf="buscador == true">
+      <form
+        style="width: 100%"
+        [formGroup]="formBusqueda"
+        (ngSubmit)="mostrarBusqueda()"
+      >
+        <input
+          type="text"
+          class="input-busqueda-inicio"
+          formControlName="titulo"
+          placeholder="Busca la pelicula que quieras ver"
+        />
         <input type="submit" value="" class="hidden" />
       </form>
     </div>
     <div style="position: relative" class="d-flex">
-      <p href="javascript:void(0);" *ngIf="buscador == false" (click)="buscador = true" class="pButtons mx-3">
+      <p
+        href="javascript:void(0);"
+        *ngIf="buscador == false"
+        (click)="buscador = true"
+        class="pButtons mx-3"
+      >
         BUSCAR
       </p>
-      <p class="pButtons mx-3" *ngIf="buscador == true" href="javascript:void(0);" (click)="buscador = false">
+      <p
+        class="pButtons mx-3"
+        *ngIf="buscador == true"
+        href="javascript:void(0);"
+        (click)="buscador = false"
+      >
         CANCELAR
       </p>
 
       <p routerLink="/login" class="pButtons mx-3">INICIAR SESIÓN</p>
-      <p routerLink="/login" class="pButtons mx-3">REGISTRO</p>
-      <p routerLink="/carrito" class="pButtons mx-3">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart bi-cart-mb"
-          viewBox="0 0 16 16">
+
+      <p (click)="logout()" class="pButtons mx-3">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-box-arrow-left"
+          viewBox="0 0 16 16"
+        >
           <path
-            d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+            fill-rule="evenodd"
+            d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0v2z"
+          />
+          <path
+            fill-rule="evenodd"
+            d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3z"
+          />
+        </svg>
+      </p>
+      <p routerLink="/carrito" class="pButtons mx-3">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-cart bi-cart-mb"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
+          />
         </svg>
       </p>
     </div>
