--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -23,6 +23,7 @@
         <p routerLink="/" class="pButtons mx-3">INICIO</p>
         <p routerLink="/peliculas" class="pButtons mx-3">PELICULAS</p>
         <p routerLink="/store" class="pButtons mx-3">CANDY & SNACK STORE</p>
+        <p routerLink="/historial-reservas" class="pButtons mx-3">MIS RESERVAS</p>
         <p *ngIf="administradorRole">
           <app-navbar-admin></app-navbar-admin>
         </p>
